--- a/StepCounter/app/src/main/res/menu/bottom_navigation.xml
+++ b/StepCounter/app/src/main/res/menu/bottom_navigation.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/nav_direction"
         android:icon="@drawable/ic_baseline_map_24"
-        android:title="Direction" />
+        android:title="Challenge" />
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_baseline_home_24"
