--- a/StepCounter/app/src/main/res/menu/bottom_navigation.xml
+++ b/StepCounter/app/src/main/res/menu/bottom_navigation.xml
@@ -15,6 +15,10 @@
     <item
         android:id="@+id/nav_info"
         android:icon="@drawable/ic_baseline_supervised_user_circle_24"
-        android:title="Personal Infomation" />
+        android:title="Personal Information" />
+    <item
+        android:id="@+id/nav_news"
+        android:icon="@drawable/ic_info_24"
+        android:title="News" />
 
 </menu>
